@@ -1,0 +1,12 @@
+
+// *** Do not edit this file, it is auto-generated ***
+
+#include <cstddef>
+#include "psddl_psana/quartz.ddl.h"
+namespace Psana {
+namespace Quartz {
+
+ConfigV1::~ConfigV1() {}
+
+} // namespace Quartz
+} // namespace Psana
