@@ -11,6 +11,11 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-03-07
+2012-07-06 Andy Salnikov
+- upgrading to pdsdata V03-07-10
+- regenerate whole thing from psddldata V00-03-06
+
 Tag: V00-03-06
 2012-06-26 Andy Salnikov
 - Encoder.DataV[12]: added value() method
